# Scrapping_McArthurGlen

./: README.md  pyproject.toml  requirements.txt
data/processed/frontend/: mcarthurglen_provence.json
data/raw/mcarthurglen-fr-designer-outlet-provence/2026-05-02/: 001_dynamic.html  001_dynamic.meta.txt  001_static.html  001_static.meta.txt
src/scraping_framework/: __init__.py  __main__.py  config.py  main.py  mcarthurglen.py  models.py  processor.py  provence_ui.py  scraper_engine.py
src/scraping_framework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
